--- a/Algo-lego/Boutique Blois.html
+++ b/Algo-lego/Boutique Blois.html
@@ -7,7 +7,7 @@
 <body>
     <header>
             <article>
-                <img src="" alt>
+                <img src="Image/logo lego.svg" alt="logo lego" class="Logo">
             </article>
             <article>
                 <h1>Blois</h1>
@@ -17,7 +17,8 @@
                 Menu déroulant tirer
             </article>
             <article>
-                barre de recherche ect
+                <input id="searchbar"type="text"name="search" placeholder="Rechercher...">
+      
             </article>
             <article>
                 <h2>Compte</h2>
@@ -30,8 +31,7 @@
             </article>
         </nav>
         <section>
-            <img src=""alt="Grande image de lego">
-        </section>
+            <img src="Image/Banderole star wars.jpg" alt="Lego star wars">
     </header>
     <main>
 
